feat(community): refine group workspace interactions